[package]
name = "penguin-lang"
version = "0.1.0"
edition = "2021"
build = 'src/build.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "0.11"
lrlex = "0.11"
lrpar = "0.11"

[dependencies]
cfgrammar = "0.11"
lrlex = "0.11"
lrpar = "0.11"
lazy_static = "*"
plotters = "0.3.5"
regex = "1.5.4"

[features]
default = []
debug = []